// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`createConfig allowedHosts option (devServer config) 1`] = `
Object {
  "allowedHosts": Array [
    ".host.com",
    "host2.com",
  ],
  "dev": Object {},
  "hot": true,
  "port": 8080,
}
`;

exports[`createConfig allowedHosts option 1`] = `
Object {
  "allowedHosts": Array [
    ".host.com",
    "host2.com",
  ],
  "dev": Object {},
  "hot": true,
  "port": 8080,
}
`;

exports[`createConfig bonjour option (devServer config) 1`] = `
Object {
  "bonjour": true,
  "dev": Object {},
  "hot": true,
  "port": 8080,
}
`;

exports[`createConfig bonjour option 1`] = `
Object {
  "bonjour": true,
  "dev": Object {},
  "hot": true,
  "port": 8080,
}
`;

exports[`createConfig client.logging option (in devServer config) 1`] = `
Object {
  "client": Object {
    "logging": "none",
  },
  "dev": Object {},
  "hot": true,
  "port": 8080,
}
`;

exports[`createConfig clientLogging option 1`] = `
Object {
  "client": Object {
    "logging": "none",
  },
  "dev": Object {},
  "hot": true,
  "port": 8080,
}
`;

exports[`createConfig clientLogging option overrides devServer config 1`] = `
Object {
  "client": Object {
    "logging": "none",
  },
  "dev": Object {},
  "hot": true,
  "port": 8080,
}
`;

exports[`createConfig compress option (in devServer config) 1`] = `
Object {
  "compress": true,
  "dev": Object {},
  "hot": true,
  "port": 8080,
}
`;

exports[`createConfig compress option 1`] = `
Object {
  "compress": true,
  "dev": Object {},
  "hot": true,
  "port": 8080,
}
`;

exports[`createConfig disableHostCheck option (in devServer config) 1`] = `
Object {
  "dev": Object {},
  "disableHostCheck": true,
  "hot": true,
  "port": 8080,
}
`;

exports[`createConfig disableHostCheck option 1`] = `
Object {
  "dev": Object {},
  "disableHostCheck": true,
  "hot": true,
  "port": 8080,
}
`;

exports[`createConfig historyApiFallback option (in devServer config) 1`] = `
Object {
  "dev": Object {},
  "historyApiFallback": true,
  "hot": true,
  "port": 8080,
}
`;

exports[`createConfig historyApiFallback option 1`] = `
Object {
  "dev": Object {},
  "historyApiFallback": true,
  "hot": true,
  "port": 8080,
}
`;

exports[`createConfig host option (devServer config) 1`] = `
Object {
  "dev": Object {},
  "host": "example.dev",
  "hot": true,
  "port": 8080,
}
`;

exports[`createConfig host option (localhost) 1`] = `
Object {
  "dev": Object {},
  "host": "localhost",
  "hot": true,
  "port": 8080,
}
`;

exports[`createConfig host option (null) 1`] = `
Object {
  "dev": Object {},
  "hot": true,
  "port": 8080,
}
`;

exports[`createConfig host option (specify for CLI and devServer config) 1`] = `
Object {
  "dev": Object {},
  "host": "other.dev",
  "hot": true,
  "port": 8080,
}
`;

exports[`createConfig host option (undefined) 1`] = `
Object {
  "dev": Object {},
  "hot": true,
  "port": 8080,
}
`;

exports[`createConfig host option 1`] = `
Object {
  "dev": Object {},
  "host": "example.dev",
  "hot": true,
  "port": 8080,
}
`;

exports[`createConfig hot only option (in devServer config) 1`] = `
Object {
  "dev": Object {},
  "hot": "only",
  "port": 8080,
}
`;

exports[`createConfig hot only option 1`] = `
Object {
  "dev": Object {},
  "hot": "only",
  "port": 8080,
}
`;

exports[`createConfig hot option (false) (in devServer config) 1`] = `
Object {
  "dev": Object {},
  "hot": false,
  "port": 8080,
}
`;

exports[`createConfig hot option (false) 1`] = `
Object {
  "dev": Object {},
  "hot": false,
  "port": 8080,
}
`;

exports[`createConfig hot option (true) (in devServer config) 1`] = `
Object {
  "dev": Object {},
  "hot": true,
  "port": 8080,
}
`;

exports[`createConfig hot option (true) 1`] = `
Object {
  "dev": Object {},
  "hot": true,
  "port": 8080,
}
`;

exports[`createConfig http2 option (in devServer config) 1`] = `
Object {
  "dev": Object {},
  "hot": true,
  "http2": true,
  "https": true,
  "port": 8080,
}
`;

exports[`createConfig http2 option 1`] = `
Object {
  "dev": Object {},
  "hot": true,
  "http2": true,
  "https": true,
  "port": 8080,
}
`;

exports[`createConfig https option (in devServer config) 1`] = `
Object {
  "dev": Object {},
  "hot": true,
  "https": true,
  "port": 8080,
}
`;

exports[`createConfig https option (in devServer config) 2`] = `
Object {
  "dev": Object {},
  "hot": true,
  "https": Object {
    "ca": Object {
      "data": Array [],
      "type": "Buffer",
    },
  },
  "port": 8080,
}
`;

exports[`createConfig https option 1`] = `
Object {
  "dev": Object {},
  "hot": true,
  "https": true,
  "port": 8080,
}
`;

exports[`createConfig https option 2`] = `
Object {
  "dev": Object {},
  "hot": true,
  "https": true,
  "port": 8080,
}
`;

exports[`createConfig info option 1`] = `
Object {
  "dev": Object {},
  "hot": true,
  "port": 8080,
}
`;

exports[`createConfig liveReload option 1`] = `
Object {
  "dev": Object {},
  "hot": true,
  "liveReload": false,
  "port": 8080,
}
`;

exports[`createConfig mimeTypes option - with force 1`] = `
Object {
  "dev": Object {},
  "hot": true,
  "mimeTypes": Object {
    "force": true,
    "typeMap": Object {
      "text/html": Array [
        "phtml",
      ],
    },
  },
  "port": 8080,
}
`;

exports[`createConfig mimeTypes option 1`] = `
Object {
  "dev": Object {},
  "hot": true,
  "mimeTypes": Object {
    "text/html": Array [
      "phtml",
    ],
  },
  "port": 8080,
}
`;

exports[`createConfig onListening option 1`] = `
Object {
  "dev": Object {},
  "hot": true,
  "onListening": [Function],
  "port": 8080,
}
`;

exports[`createConfig open option (boolean) (in devServer config) 1`] = `
Object {
  "dev": Object {},
  "hot": true,
  "open": true,
  "openPage": "",
  "port": 8080,
}
`;

exports[`createConfig open option (boolean) 1`] = `
Object {
  "dev": Object {},
  "hot": true,
  "open": true,
  "openPage": "",
  "port": 8080,
}
`;

exports[`createConfig open option (object) 1`] = `
Object {
  "dev": Object {},
  "hot": true,
  "open": Object {
    "app": Array [
      "Google Chrome",
      "--incognito",
    ],
  },
  "openPage": "",
  "port": 8080,
}
`;

exports[`createConfig open option (string) 1`] = `
Object {
  "dev": Object {},
  "hot": true,
  "open": "Google Chrome",
  "openPage": "",
  "port": 8080,
}
`;

exports[`createConfig openPage multiple option (in devServer config) 1`] = `
Object {
  "dev": Object {},
  "hot": true,
  "open": true,
  "openPage": Array [
    "/different/page",
    "/different/page2",
  ],
  "port": 8080,
}
`;

exports[`createConfig openPage option (in devServer config) 1`] = `
Object {
  "dev": Object {},
  "hot": true,
  "open": true,
  "openPage": "/different/page",
  "port": 8080,
}
`;

exports[`createConfig openPage option 1`] = `
Object {
  "dev": Object {},
  "hot": true,
  "open": true,
  "openPage": Array [
    "/different/page",
  ],
  "port": 8080,
}
`;

exports[`createConfig overlay option (in devServer config) 1`] = `
Object {
  "dev": Object {},
  "hot": true,
  "overlay": true,
  "port": 8080,
}
`;

exports[`createConfig overlay option 1`] = `
Object {
  "dev": Object {},
  "hot": true,
  "overlay": true,
  "port": 8080,
}
`;

exports[`createConfig port option (difference) 1`] = `
Object {
  "dev": Object {},
  "hot": true,
  "port": 7070,
}
`;

exports[`createConfig port option (same) (null) 1`] = `
Object {
  "dev": Object {},
  "hot": true,
  "port": null,
}
`;

exports[`createConfig port option (same) (string) 1`] = `
Object {
  "dev": Object {},
  "hot": true,
  "port": "9090",
}
`;

exports[`createConfig port option (same) (undefined) 1`] = `
Object {
  "dev": Object {},
  "hot": true,
  "port": undefined,
}
`;

exports[`createConfig port option (same) 1`] = `
Object {
  "dev": Object {},
  "hot": true,
  "port": 9090,
}
`;

exports[`createConfig profile option 1`] = `
Object {
  "dev": Object {},
  "hot": true,
  "port": 8080,
  "profile": "profile",
}
`;

exports[`createConfig progress option (devServer config) 1`] = `
Object {
  "dev": Object {},
  "hot": true,
  "port": 8080,
  "progress": true,
}
`;

exports[`createConfig progress option 1`] = `
Object {
  "dev": Object {},
  "hot": true,
  "port": 8080,
  "progress": true,
}
`;

exports[`createConfig public option (devServer config) 1`] = `
Object {
  "dev": Object {},
  "hot": true,
  "port": 8080,
  "public": true,
}
`;

exports[`createConfig public option 1`] = `
Object {
  "dev": Object {},
  "hot": true,
  "port": 8080,
  "public": true,
}
`;

exports[`createConfig publicPath option (not specify) 1`] = `
Object {
  "dev": Object {},
  "hot": true,
  "port": 8080,
}
`;

exports[`createConfig publicPath option (path in devServer option) 1`] = `
Object {
  "dev": Object {
    "publicPath": "/assets/",
  },
  "hot": true,
  "port": 8080,
}
`;

exports[`createConfig publicPath option (path in output option) 1`] = `
Object {
  "dev": Object {},
  "hot": true,
  "port": 8080,
}
`;

exports[`createConfig publicPath option (path without starting slash in output option) 1`] = `
Object {
  "dev": Object {},
  "hot": true,
  "port": 8080,
}
`;

exports[`createConfig publicPath option (url in devServer option) 1`] = `
Object {
  "dev": Object {
    "publicPath": "http://localhost:8080/assets/",
  },
  "hot": true,
  "port": 8080,
}
`;

exports[`createConfig publicPath option (url in output option) 1`] = `
Object {
  "dev": Object {},
  "hot": true,
  "port": 8080,
}
`;

exports[`createConfig simple 1`] = `
Object {
  "dev": Object {},
  "hot": true,
  "port": 8080,
}
`;

exports[`createConfig static option (boolean) 1`] = `
Object {
  "dev": Object {},
  "hot": true,
  "port": 8080,
  "static": false,
}
`;

exports[`createConfig static option (in devServer config) 1`] = `
Object {
  "dev": Object {},
  "hot": true,
  "port": 8080,
  "static": true,
}
`;

exports[`createConfig static option (list of strings) 1`] = `
Object {
  "dev": Object {},
  "hot": true,
  "port": 8080,
  "static": Array [
    "assets1",
    "assets2",
  ],
}
`;

exports[`createConfig static option (string) 1`] = `
Object {
  "dev": Object {},
  "hot": true,
  "port": 8080,
  "static": Array [
    "assets",
  ],
}
`;

exports[`createConfig useLocalIp option (in devServer config) 1`] = `
Object {
  "dev": Object {},
  "hot": true,
  "port": 8080,
  "useLocalIp": true,
}
`;

exports[`createConfig useLocalIp option 1`] = `
Object {
  "dev": Object {},
  "hot": true,
  "port": 8080,
  "useLocalIp": true,
}
`;
